[payment] initial commit

--- a/com.market.payment/src/main/resources/application.properties
+++ b/com.market.payment/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.application.name=order
+spring.application.name=payment
 
-message.exchange=market
-message.queue.product=market.product
+# 컨슈머는 큐만 바라볼 거기 때문에 큐만 알면 된다.
 message.queue.payment=market.payment
 
 spring.rabbitmq.host=localhost
