--- a/com.market.product/src/main/resources/application.properties
+++ b/com.market.product/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=product
+
+## 컨슈머는 메시지 큐만 알면 된다.
+message.queue.product=market.product
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
